# YOLO-TensorRT10-FrameWork

./: CMakeLists.txt  README.md  demo.sh
cmake/: FindTensorRT.cmake
include/: yolov5a.h
src/: main.cc  yolov5a.cc
